--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,14 @@
 }
 
 .nav-item {
-    font-size: 0.9rem;
+    font-size: 0.97rem;
     font-weight: 800;
+}
+
+.navbar {
+    min-height: 100px;
+}
+
+.shopper-item {
+    font-size: 2rem;
 }
